# DevToys

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hash.rs
src/components/layout/: Sidebar.tsx
src/components/ui/: CopyButton.tsx  Icon.tsx  ToolCard.tsx
src/store/: settingsStore.ts  toolRegistry.ts
src/tools/base64/: index.tsx
src/tools/color-converter/: index.tsx
src/tools/hash-generator/: index.tsx
src/tools/json-formatter/: index.tsx
src/tools/jwt-decoder/: index.tsx
src/tools/lorem-ipsum/: index.tsx
src/tools/markdown-preview/: index.tsx
src/tools/number-base/: index.tsx
src/tools/regex-tester/: index.tsx
src/tools/text-case/: index.tsx
src/tools/text-diff/: index.tsx
src/tools/unix-timestamp/: index.tsx
src/tools/url-encoder/: index.tsx
src/tools/uuid-generator/: index.tsx
src/types/: tool.ts
