[package]
name = "devtoys"
version = "0.1.0"
description = "DevToys - Developer Utilities"
authors = ["you"]
edition = "2021"

[lib]
name = "devtoys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
